update events overview documentation

--- a/plugins/google-play-services/events/overview.html
+++ b/plugins/google-play-services/events/overview.html
@@ -148,22 +148,14 @@
                         <p class="content">
                             <b>The Google Play Service: Events</b>
                         </p>
-                        <p class="content">
-                            The Saved Games service is a feature provided by Google Play Services that allows developers
-                            to save and manage game snapshots in the cloud.
-                            With this service, developers can save the game state at any point in time, enabling their
-                            players to continue playing from that exact point in the future from any compatible device.
-                        </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            The Saved Games service provides a reliable and scalable solution for game developers to
-                            implement snapshot functionality in their games.
-                            It also supports cross-platform snapshotting, allowing games to save and resume their game
-                            progress across multiple devices.
-                            In addition to saving game state, the service provides features such as snapshot management,
-                            where developers can enable players to view and manage all of their saved games.
-                            Snapshots can also be deleted and modified at any time, providing developers with full
-                            control over their players saved game data, with the possibility of exposing this
-                            functionality to the players themselves.
+                            The Events service, offered by Google Play Services, is a game-changer for developers looking to save and 
+                            manage player statistics effortlessly in the cloud.
+                            This powerful service allows developers to retrieve valuable information about different events within their games.
+                            By leveraging the Events service, developers gain access to in-depth statistics that can be used to track player activities, present achievements 
+                            and milestones to the player, dynamically adjust game mechanics based on player behavior, and create personalized experiences tailored to 
+                            individual players. With the ability to seamlessly integrate Google Play Events into their games, developers can make data-driven 
+                            decisions to enhance player engagement and retention.
                         </p>
                     </div>
                     <div class="info" style="margin-top: 20px">
@@ -171,16 +163,7 @@
                             <b>The Unreal Engine Plugin</b>
                         </p>
                         <p class="content">
-                            This Unreal Engine plugin for the Snapshots Saved Game service is designed to expose the
-                            service's features to blueprints, making it easier for game developers to integrate the
-                            service into their games.
-                            With the plugin, developers can easily create, save, load game snapshots, and also retrieve
-                            information about snapshots and save states.
-                            The plugin provides a user-friendly interface within the Unreal Engine editor, allowing
-                            developers to connect to the service easily.
-                            By integrating the Snapshots Saved Game Service into their games using this plugin,
-                            developers can offer players a seamless and easy-to-use save and load system that is
-                            reliable and secure.
+                            Introducing the Unreal Engine plugin for the Events service, a powerful tool that brings the features of Google Play Services directly to your Unreal Engine projects. This plugin is designed to expose the Events service's functionality to Blueprint scripting, simplifying the integration process for game developers. With an intuitive and user-friendly interface seamlessly integrated into the Unreal Engine editor, connecting to the service becomes a breeze. Whether you're a seasoned Unreal Engine developer or new to the platform, our plugin empowers you to easily increment and retrieve information about Google Play Events, enhancing the capabilities of your game.
                         </p>
                         <p class="content">
                             The plugin makes use of <span style="font-weight: 500">no additional libraries or
@@ -197,10 +180,10 @@
                     </div>
                     <!-- <div class="info" style="margin-top: 20px"> -->
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/SavedGames/SavedGames_Plugin_AllNodes.png" style="width: 95%">
+                        <img src="../../../images/Events/Events_Plugin_AllNodes.png" style="width: 50%">
                     </div>
                     <!-- </div> -->
-                    <div style="margin-bottom: 50px">
+                    <div style="margin-bottom: 250px">
                     </div>
                 </div>
             </main>
