--- a/plugins/google-play-services/events/event.html
+++ b/plugins/google-play-services/events/event.html
@@ -141,41 +141,27 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2 text-white-shadow">Snapshot Metadata</h1>
+                    <h1 class="h2 text-white-shadow">Google Play Event</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            The SnapshotMetadata struct is designed to mimic the SnapshotMetadata provided by the Google
-                            Play Services SDK for the Snapshots service.
-                            It contains various additional pieces of information about a snapshot.
+                            The GooglePlayEvent struct is designed to mimic the Event provided by the Google
+                            Play Services SDK for the Events service.
+                            It contains various information about the event in question.
                         </p>
                         <p class="content">
-                            The read and write fields of the SnapshotMetadata struct are Description, PlayedTime and
-                            ProgressValue.
-                            These values can be changed during save and conflict resolution actions.
-                            The PlayedTime and ProgressValue fields can work with the provided <a
-                                href="resolution_policy.html">Conflict Resolution Policies</a> <span
-                                style="font-weight: 500">RESOLUTION_POLICY_LONGEST_PLAYTIME</span> and <span
-                                style="font-weight: 500">RESOLUTION_POLICY_HIGHEST_PROGRESS</span> respectively.
-                        </p>
-                        <p class="content">
-                            The read only fields of the SnapshotMetadata struct are SnapshotID, UniqueName, Title,
-                            LastModifiedTimestamp and DeviceName.
-                            These values cannot be changed, with the exception of LastModifiedTimestamp and DeviceName
-                            which automatically get updated when overwriting a Snapshot with the <a
-                                href="saving_game.html">Saving a Game</a> blueprint node.
+                            All fields are read and writable and consist of EventId, Name, Description, Value, FormattedValue and IsVisible.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            By using the <a href="fetch_games.html">Fetch Games</a> blueprint node, developers can
-                            easily retrieve and store information about their game's snapshots, and use it to build a
-                            better gaming experience for their users.
+                            By using the <a href="incrementing_event.html">Incrementing Event</a> blueprint node in conjunction with setting
+                            up the Event itself in the Google Play Console, most of this information will be available to you when you load an event.
                         </p>
                     </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; align-items: center;">
-                        <img src="../../../images/SavedGames/SavedGames_Object_SnapshotMetadata.png"
+                        <img src="../../../images/Events/Events_Object_GooglePlayEvent.png"
                             style="max-width: 70%;">
                     </div>
                 </div>
@@ -191,66 +177,48 @@
                         </thead>
                         <tbody>
                             <tr>
+                                <td>EventId</td>
+                                <td>FString</td>
+                                <td>
+                                    The unique identifier for the Event as can be seen in the Google Play Console.</br>
+                                    This is also used when <a href="incrementing_event.html">Incrementing an Event</a>.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Name</td>
+                                <td>FString</td>
+                                <td>
+                                    The name of the Event as setup in the Google Play Console.
+                                </td>
+                            </tr>
+                            <tr>
                                 <td>Description</td>
                                 <td>FString</td>
                                 <td>
-                                    A brief description of the saved game data.</br>
-                                    Defined when <a href="saving_game.html">Saving a Game</a>.
+                                    The description of the Event as setup in the Google Play Console.
                                 </td>
                             </tr>
                             <tr>
-                                <td>PlayedTime</td>
+                                <td>Value</td>
                                 <td>int64</td>
                                 <td>
-                                    A value indicating how long the player has played with this Snapshot.</br>
-                                    Used with <a href="resolution_policy.html">Resolution Policy</a>
-                                    RESOLUTION_POLICY_LONGEST_PLAYTIME.</br>
-                                    Defined when <a href="saving_game.html">Saving a Game</a>.
+                                    The increment counter for the event.</br>
+                                    This value increases as you make use of the <a href="incrementing_event.html">Incrementing an Event</a> blueprint.
                                 </td>
                             </tr>
                             <tr>
-                                <td>ProgressValue</td>
-                                <td>int64</td>
-                                <td>
-                                    A value indicating how far the player has progressed with this Snapshot.</br>
-                                    Used with <a href="resolution_policy.html">Resolution Policy</a>
-                                    RESOLUTION_POLICY_HIGHEST_PROGRESS.</br>
-                                    Defined when <a href="saving_game.html">Saving a Game</a>.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>SnapshotID</td>
+                                <td>FormattedValue</td>
                                 <td>FString</td>
                                 <td>
-                                    The players Google Drive ID for the Snapshot.
+                                    A Formatted value of the event provided by the Google Play SDK. </br>
+                                    <b>NOTE:</b> The SDK does not seem to provide this value as of yet.
                                 </td>
                             </tr>
                             <tr>
-                                <td>UniqueName</td>
-                                <td>FString</td>
+                                <td>IsVisible</td>
+                                <td>bool</td>
                                 <td>
-                                    The Slot Name of the Snapshot.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Title</td>
-                                <td>FString</td>
-                                <td>
-                                    The Slot Name of the Snapshot.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>LastModifiedTimestamp</td>
-                                <td>int64</td>
-                                <td>
-                                    The date and time when the snapshot was last modified represented in unix time.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>DeviceName</td>
-                                <td>FString</td>
-                                <td>
-                                    The model of the device used when creating the Snapshot.
+                                    Whether or not the Event is visible as setup in the Google Play Console.
                                 </td>
                             </tr>
                         </tbody>
