--- a/plugins/google-play-services/events/overview.html
+++ b/plugins/google-play-services/events/overview.html
@@ -111,7 +111,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="fetch_events.html">
-                                Fetching Events
+                                Loading Events
                             </a>
                         </li>
                         <hr />
