--- a/Squiggle.html
+++ b/Squiggle.html
@@ -223,12 +223,20 @@
     </div>
   </div>
 
-  <div class="container" style="margin-top: 50px; text-align: center;">
-    <a
+  <div class="container" style="margin-top: 50px; margin-bottom: 50px; text-align: center;">
+    <div class="row">
+      <div class="col-3">
+      </div>
+      <div class="col-6">
+        <a
       href='https://play.google.com/store/apps/details?id=com.JoshKarpul.Squiggle&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-      <img alt='Get it on Google Play' style="width: 50vw"
+      <img alt='Get it on Google Play' style="width: 100%"
         src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' />
     </a>
+      </div>
+      <div class="col-3">
+      </div>
+    </div>
   </div>
 
 
