--- a/index.html
+++ b/index.html
@@ -83,30 +83,13 @@
     </div>
   </nav>
 
-  <!-- <div style="position: fixed; z-index: -50;">
-    <div class="row justify-content-between" style="margin-top: -50px; margin-right: -5vw; margin-left: -5vw">
-      <div class="col overflow-visible">
-        <div class="background fade-top">
-          <img src="images/Squiggle/MediumLevel.png" class="img-fluid" alt="...">
-        </div>
-      </div>
-      <div class="col overflow-visible">
-        <div class="background fade-top">
-          <img src="images/Squiggle/EasyLevel.png" class="img-fluid" alt="...">
-        </div>
-      </div>
-      <div class="col overflow-visible">
-        <div class="background fade-top">
-          <img src="images/Squiggle/MediumLevel.PNG" class="img-fluid" alt="...">
-        </div>
-      </div>
-    </div>
-  </div> -->
-
   <div style="padding-top: 100px"></div>
 
   <div class="container d-flex justify-content-center align-items-center">
     <img src="images/PorretGaming_Feature_Image.png" alt="Feature Image">
+  </div>
+  <div class="container d-flex justify-content-center align-items-center slogan" style="">
+    Empowering Developers, Inspiring Players
   </div>
 
   <div style="padding-top: 50px"></div>
