style cards a bit more on homepage

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
       <div class="row">
         <div class="col-4">
           <a href="./plugins/google-play-services/saved-games/overview.html" class="text-decoration-none">
-            <div class="card text-center card-custom">
+            <div class="card text-center card-custom blue">
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Saved Games</h5>
               </div>
               <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" alt="...">
               <div class="card-body card-body-custom">
                 <p class="card-text">
-                  Pack of Unreal Engine blueprint nodes exposing Google Play's cloud-saving service to Android Game
+                  Unreal Engine blueprint nodes exposing Google Play's cloud-saving service to</br> Android Game
                   Developers.
                 </p>
               </div>
@@ -116,14 +116,14 @@
         </div>
         <div class="col-4">
           <a href="./plugins/google-play-services/events/overview.html" class="text-decoration-none">
-            <div class="card text-center card-custom">
+            <div class="card text-center card-custom blue">
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Events</h5>
               </div>
               <img src="images/Events/GooglePlay_Events_Feature.png" alt="...">
               <div class="card-body card-body-custom">
                 <p class="card-text">
-                  Pack of Unreal Engine blueprint nodes exposing Google Play's event analytics service to Android Game
+                  Unreal Engine blueprint nodes exposing Google Play's event analytics service to</br> Android Game
                   Developers.
                 </p>
               </div>
@@ -142,7 +142,7 @@
       <div class="row">
         <div class="col-4">
           <a href="./Squiggle.html" class="text-decoration-none">
-            <div class="card text-center card-custom">
+            <div class="card text-center card-custom aquamarine">
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Squiggle</h5>
               </div>
