--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <div class="col-4">
           <a href="./plugins/google-play-services/saved-games/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom blue">
+              <span class="badge-alert">New!</span>
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Saved Games</h5>
               </div>
@@ -117,6 +118,7 @@
         <div class="col-4">
           <a href="./plugins/google-play-services/events/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom blue">
+              <span class="badge-alert">New!</span>
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Events</h5>
               </div>
