--- a/plugins/google-play-services/events/incrementing_event.html
+++ b/plugins/google-play-services/events/incrementing_event.html
@@ -123,6 +123,11 @@
                                 Event
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Event Error
+                            </a>
+                        </li>
                         <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Support</a>
@@ -168,7 +173,8 @@
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             The Event ID of the Event to be incremented.</br>
-                            This value can be retrieved either by <a href="fetch_events.html">Fetching All Events</a> or from the Google Play Console.
+                            This value can be retrieved either by <a href="fetch_events.html">Fetching All Events</a> or from the Google Play Console.</br>
+                            If the Event ID is invalid, Google simply ignores the request, resulting in no failure.
                         </p>
                     </div>
                 </div>
