--- a/plugins/google-play-services/events/event_error.html
+++ b/plugins/google-play-services/events/event_error.html
@@ -119,12 +119,12 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="event.html">
+                            <a class="nav-link inactive" href="event.html">
                                 Event
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="event_error.html">
+                            <a class="nav-link active" href="event_error.html">
                                 Event Error
                             </a>
                         </li>
@@ -144,92 +144,47 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div
-                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2 text-white-shadow">Google Play Event</h1>
+                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow">Google Play Event Error</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
-                        <p class="content">
-                            The GooglePlayEvent struct is designed to mimic the Event provided by the Google
-                            Play Services SDK for the Events service.
-                            It contains various information about the event in question.
-                        </p>
-                        <p class="content">
-                            All fields are read and writable and consist of EventId, Name, Description, Value, FormattedValue and IsVisible.
-                        </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            By using the <a href="incrementing_event.html">Incrementing Event</a> blueprint node in conjunction with setting
-                            up the Event itself in the Google Play Console, most of this information will be available to you when you load an event.
+                            The GooglePlayEventError enumeration is a list of possible error's that can occur during actions
+                            taken with all the blueprint nodes.
                         </p>
                     </div>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                    <div style="display: flex; align-items: center;">
-                        <img src="../../../images/Events/Events_Object_GooglePlayEvent.png"
-                            style="max-width: 70%;">
+                <div style="padding-top: 30px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <table class="table table-striped table-bordered table-documentation"
+                            style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th>Error</th>
+                                    <th>Description</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>NO_CONNECTION</td>
+                                    <td>
+                                        Failure when attempting to form a connection to Google or the local cache on the device.</br>
+                                        Can occur when <a href="fetch_events.html">Loading Events</a>.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>LOAD_FAILED</td>
+                                    <td>
+                                        An error occurred trying to load events.</br>
+                                        Can occur when <a href="fetch_events.html">Loading Events</a>.
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px;">
-                    <table class="table table-striped table-bordered table-documentation"
-                        style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th>Field</th>
-                                <th>Type</th>
-                                <th>Description</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>EventId</td>
-                                <td>FString</td>
-                                <td>
-                                    The unique identifier for the Event as can be seen in the Google Play Console.</br>
-                                    This is also used when <a href="incrementing_event.html">Incrementing an Event</a>.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Name</td>
-                                <td>FString</td>
-                                <td>
-                                    The name of the Event as setup in the Google Play Console.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Description</td>
-                                <td>FString</td>
-                                <td>
-                                    The description of the Event as setup in the Google Play Console.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>Value</td>
-                                <td>int64</td>
-                                <td>
-                                    The increment counter for the event.</br>
-                                    This value increases as you make use of the <a href="incrementing_event.html">Incrementing an Event</a> blueprint.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>FormattedValue</td>
-                                <td>FString</td>
-                                <td>
-                                    A Formatted value of the event provided by the Google Play SDK. </br>
-                                    <b>NOTE:</b> The SDK does not seem to provide this value as of yet.
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>IsVisible</td>
-                                <td>bool</td>
-                                <td>
-                                    Whether or not the Event is visible as setup in the Google Play Console.
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div style="margin-bottom: 150px">
+                <div style="margin-bottom: 400px">
                 </div>
             </main>
         </div>
