--- a/plugins/google-play-services/events/getting_started.html
+++ b/plugins/google-play-services/events/getting_started.html
@@ -123,6 +123,11 @@
                                 Event
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="event_error.html">
+                                Event Error
+                            </a>
+                        </li>
                         <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Support</a>
