--- a/plugins/google-play-services/saved-games/snapshot_error.html
+++ b/plugins/google-play-services/saved-games/snapshot_error.html
@@ -177,7 +177,7 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content" style="margin-bottom: 0rem;">
-                            The Snapshot Error enumeration is a list of possible error's that can occur during actions
+                            The SnapshotError enumeration is a list of possible error's that can occur during actions
                             taken with all the blueprint nodes.
                         </p>
                     </div>
@@ -188,7 +188,7 @@
                             style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
                             <thead class="thead-dark">
                                 <tr>
-                                    <th>Resolution Policy</th>
+                                    <th>Error</th>
                                     <th>Description</th>
                                 </tr>
                             </thead>
