add some info to the on failure delegate for fetching events

--- a/plugins/google-play-services/events/fetch_events.html
+++ b/plugins/google-play-services/events/fetch_events.html
@@ -217,7 +217,8 @@
                                 <b>On Failure</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A delegate that will be called if there is an error fetching the events.</br>
+                                A delegate that will be called if there is an error fetching the events.
+                                The delegate will produce an <a href="event_error.html">Event Error type</a> for the developer to handle appropriately.
                                 You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
