add links to marketplace and discord

--- a/plugins/google-play-services/events/contact.html
+++ b/plugins/google-play-services/events/contact.html
@@ -151,8 +151,7 @@
                     <div class="info">
                         <p class="content" style="margin-bottom: 0rem;">
                             You can get support by emailing us at "porretgaming@gmail.com". </br></br>
-                            A discord server will be launched soon to enable our community to assist you on issues with
-                            any of the plugins offered by Porret Gaming.
+                            Get in touch with out community on our <a href="https://discord.gg/DYTNxrXG">Discord Server</a>.
                         </p>
                     </div>
                 </div>
