--- a/plugins/google-play-services/saved-games/getting_started.html
+++ b/plugins/google-play-services/saved-games/getting_started.html
@@ -181,7 +181,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the official Unreal Engine Marketplace.
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/slug/81a9c3e023a949c7bc5b868e32f253d1">Official Unreal Engine Marketplace.</a>
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
