add discord link to main Contact page

--- a/contact.html
+++ b/contact.html
@@ -90,6 +90,7 @@
           For any queries, feel free to contact me making use of the following details.
         </p>
         </br>
+        <p class="lead">Discord: <a href="https://discord.gg/DYTNxrXG">Invite Link</a></p>
         <p class="lead">Email: <b>porretgaming@gmail.com</b></p>
       </div>
     </div>
