fix layout of home screen when on mobile devices

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="container">
       <h1 class="section-header" style="color:rgb(134, 207, 255)" >UNREAL ENGINE</h1>
       <div class="row">
-        <div class="col-4">
+        <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/saved-games/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom blue">
               <span class="badge-alert">New!</span>
@@ -123,7 +123,7 @@
             </div>
           </a>
         </div>
-        <div class="col-4">
+        <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/events/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom blue">
               <span class="badge-alert">New!</span>
@@ -150,7 +150,7 @@
     <div class="container">
       <h1 class="section-header" style="color:rgb(151, 255, 220)">GAMES</h1>
       <div class="row">
-        <div class="col-4">
+        <div class="col-md-4 col-12 mb-5">
           <a href="./Squiggle.html" class="text-decoration-none">
             <div class="card text-center card-custom aquamarine">
               <div class="card-header card-header-custom">
