fix word spacing and get on google play button positioning

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <img src="images/SavedGames/SavedGames_Plugin_Showcase.png" alt="...">
               <div class="card-body card-body-custom">
                 <p class="card-text">
-                  Unreal Engine blueprint nodes exposing Google Play's cloud-saving service to</br> Android Game
+                  Unreal Engine blueprint nodes exposing Google Play's cloud-saving service to Android Game
                   Developers.
                 </p>
               </div>
@@ -133,7 +133,7 @@
               <img src="images/Events/GooglePlay_Events_Feature.png" alt="...">
               <div class="card-body card-body-custom">
                 <p class="card-text">
-                  Unreal Engine blueprint nodes exposing Google Play's event analytics service to</br> Android Game
+                  Unreal Engine blueprint nodes exposing Google Play's event analytics service to Android Game
                   Developers.
                 </p>
               </div>
