update slogan feature image, fix background sizing

--- a/index.html
+++ b/index.html
@@ -94,10 +94,16 @@
   <div style="padding-top: 100px"></div>
 
   <div class="container d-flex justify-content-center align-items-center">
-    <img src="images/PorretGaming_Feature_Image.png" alt="Feature Image">
+    <img class="slogan-image" src="images/PorretGaming_Logo_Cut.png" alt="Feature Image">
   </div>
-  <div class="container d-flex justify-content-center align-items-center slogan" style="">
-    Empowering Developers, Inspiring Players
+  <div style="padding-top: 50px"></div>
+
+  <div class="container d-flex justify-content-center align-items-center slogan">
+    <div class="line"></div>
+    <div>
+      <span style="white-space: nowrap;">Empowering Developers,</span>
+      <span style="white-space: nowrap;">Inspiring Players</span>
+    </div>
   </div>
 
   <div style="padding-top: 50px"></div>
