--- a/plugins/google-play-services/saved-games/fetch_games.html
+++ b/plugins/google-play-services/saved-games/fetch_games.html
@@ -66,7 +66,7 @@
                                     <img src="../../../images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png"
                                         alt="Google Play Saved Games" class="dropdown-item-image">
                                     <div class="dropdown-item-text">
-                                        Google Play: Saved Games
+                                        Play: Saved Games
                                         <span class="dropdown-item-subtext">Android Plugin</span>
                                     </div>
                                 </div>
@@ -78,7 +78,7 @@
                                     <img src="../../../images/Events/GooglePlay_Events_Plugin_Logo.png"
                                         alt="Google Play Events" class="dropdown-item-image">
                                     <div class="dropdown-item-text">
-                                        Google Play: Events
+                                        Play: Events
                                         <span class="dropdown-item-subtext">Android Plugin</span>
                                     </div>
                                 </div>
