--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -63,7 +63,7 @@
                 <div class="dropdown-item-content">
                   <img src="./images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png" alt="Google Play Saved Games" class="dropdown-item-image">
                   <div class="dropdown-item-text">
-                    Google Play: Saved Games
+                    Play: Saved Games
                     <span class="dropdown-item-subtext">Android Plugin</span>
                   </div>
                 </div>
@@ -74,7 +74,7 @@
                 <div class="dropdown-item-content">
                   <img src="./images/Events/GooglePlay_Events_Plugin_Logo.png" alt="Google Play Events" class="dropdown-item-image">
                   <div class="dropdown-item-text">
-                    Google Play: Events
+                    Play: Events
                     <span class="dropdown-item-subtext">Android Plugin</span>
                   </div>
                 </div>
